# EnCode

./: Cargo.toml  README.md  site.html  Гайд_по_созданию_плагинов.md
WHEN_COMPILE/move_to_debug_and_release/: general-data.db
WHEN_COMPILE/move_to_debug_and_release/static/color_schemes/: encode-dark.xml
inter_data_lib/: Cargo.toml
inter_data_lib/src/: lib.rs
plugs/std_commands/: Cargo.toml
plugs/std_commands/src/: lib.rs
plugs/std_highlighting/: Cargo.toml
plugs/std_highlighting/src/: lib.rs
plugs/std_menu/: Cargo.toml
plugs/std_menu/src/: lib.rs
plugs/std_pyright_integration/: Cargo.toml
plugs/std_pyright_integration/src/: lib.rs
plugs/std_shortcuts/: Cargo.toml
plugs/std_shortcuts/src/: lib.rs
site/: 1.html  3.html  4.html  6.html
src/: main.rs
src/app/: mod.rs
src/app/func/: editor.rs  launcher.rs  mod.rs
src/app/ui/: editor.rs  launcher.rs  mod.rs
src/app/ui/launcher/: mod.rs  new_project.rs  open_project.rs  plugin_settings.rs
src/plug/: funcs.rs  inter_data.rs  mod.rs
src/sql/: general_data.rs
