[package]
name = "EnCode"
version = "0.0.0"
edition = "2021"

[dependencies]
gtk4 = "0.9"
sourceview5 = "0.9"
gio = "0.20"
glib = "0.20"
rusqlite = "0.32"
lazy_static = "1.5"
libloading = "0.8"
idl = { path = "inter_data_lib", package = "inter_data_lib" }

[workspace]
members = ["inter_data_lib", "plugs/*"]
