[package]
name = "std_menu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
idl = { path = "../../inter_data_lib", package = "inter_data_lib" }
gtk4 = { version = "0.9", features = ["v4_12"] }
gio = "0.20"
glib = "0.20"
sourceview5 = "0.9"
lazy_static = "1.5"
libloading = "0.8"
